[package]
name = "upower"
version = "0.1.0"
edition = "2024"

[dependencies]
zbus.version = "5"
zbus.default-features = false
zbus.features = ["tokio"]
zbus_macros.version = "5"
serde.version = "1"
serde.features = ["derive"]
zvariant.version = "5"
serde_json.version = "1"

[dev-dependencies]
tokio.version = "1"
tokio.features = ["full"]
pretty_assertions.version = "1"
